css/backlog.css
.content {
    padding-left: 275px;
    padding-right: 15px;
    padding-top: 50px;
    padding-bottom: 20px;
}

.backlog__titles {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 5rem 0 2rem 0;
}

.assigned-to,
.category,
.details,
.backlog__titles>h3 {
    flex: 1;
}

.backlog__titles>h3 {
    font-size: 16px;
    text-transform: uppercase;
    color: #3737cf;
}

.category,
.backlog__titles>h3:nth-child(2) {
    text-align: center;
    max-width: 140px;
}

.details,
.backlog__titles>h3:nth-child(3) {
    text-align: right;
}

.details {
    display: flex;
    justify-content: flex-end;
    position: relative;
}

.backlog__list {
    margin: 0;
    padding: 0;
}

.backlog__list-item {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0 0 10px 0;
    padding: 15px 20px;
    background-color: rgb(248, 248, 248);
    border-radius: 5px;
    box-shadow: 0 1px 2px #cfcfcf;
    border: 1px solid #e1e1e1;
    overflow: hidden;
}

.backlog__list-item:hover .action-btn {
    transform: translateX(0);
}

.backlog__list-item::after {
    content: '';
    display: block;
    position: absolute;
    left: 0;
    right: 0;
    background-color: chartreuse;
    width: 5px;
    height: 100%;
}

.backlog__list-item.sale::after {
    background-color: blue;
}

.backlog__list-item.product::after {
    background-color: chartreuse;
}

.backlog__list-item.management::after {
    background-color: red;
}

.assigned-to {
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.assigned-to__img {
    width: 55px;
    height: 55px;
    border-radius: 100%;
    object-fit: cover;
    border: 4px solid white;
    cursor: pointer;
    display: block;
    box-shadow: 1px 1px 8px #00000021;
}

.assigned-to__img:not(:first-child) {
    margin: 0 0 0 -20px;
}

.assigned-to__img:hover {
    z-index: 10;
    transform: scale(1.1);
}

.assigned-to__person {
    display: flex;
    flex-direction: column;
}

.assigned-to__name,
.assigned-to__mail,
.category__name,
.details__description {
    font-size: 16px;
    color: #1b1b1b;
}

time {
    font-size: 13px;
    font-style: italic;
    display: block;
    margin: 0.4rem 0 0 0;
    color: grey;
}

.assigned-to__mail {
    color: #1b1b1b;
    color: #0070ff;
}

.category__name::first-letter {
    text-transform: uppercase;
}

.assigned-to__mail {
    font-size: 15px;
    font-style: italic;
}

.details__description {
    max-width: 240px;
    word-wrap: break-word;
    text-align: left;
}

.user-image-container {
    display: flex;
    align-items: center;
    min-width: 150px;
    position: relative;
}

.action-btn {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    top: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.64);
    padding: 0 15px;
    transform: translateX(100%);
    transition: all 125ms ease-in-out;
}

.edit-task,
.add-task {
    width: 30px;
    height: 30px;
    display: block;
    border: 1px solid #e1e1e1;
    border-radius: 100%;
    background-color: rgb(243, 243, 243);
    padding: 6px;
    margin-left: 5px;
    cursor: pointer;
    transition: all 225ms ease-in-out;
}

.edit-task:hover,
.add-task:hover {
    background-color: rgb(233, 233, 233);
    border: 1px solid #cccccc;
}

.restore-task {
    position: absolute;
    color: white;
    padding: 10px 20px;
    top: 20px;
    right: 0;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    transform: translateX(100vw);
    background-color: #6060D9;
    box-shadow: 0 1px 2px rgb(63, 63, 233);
    transition: all 225ms cubic-bezier(0.075, 0.82, 0.165, 1);
}

.overlay {
    opacity: 0;
    z-index: -1;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100vh;
    background-color: #000000cf;
    transition: all 125ms ease-in-out;
}

.overlay.active {
    opacity: 1;
    z-index: 20;
}


/* FORM ------------------------------------------------------------- */

.overlay__container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.figure-container {
    background-color: rgb(241, 241, 241);
    border-radius: 0.3rem;
    padding: 2rem;
    min-width: 65rem;
    position: absolute;
}

.close {
    width: 4rem;
    height: 4rem;
    position: absolute;
    top: 1rem;
    right: 1rem;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 0.6rem;
    background-color: white;
    border-radius: 100%;
}



.form-title {
    text-transform: uppercase;
    font-size: 2rem;
    background-color: rgb(240, 240, 240);
    font-weight: bold;
}

.form-container {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    margin: 0 -2rem;
}

.form__column {
    flex: 1;
    margin: 0 2rem;
}

.form__title,
.form__category,
.form__textarea,
.form__date,
.form__urgency,
.form__assigned-to {
    margin: 2rem 0 0 0;
}

.form__assigned-to {
    position: relative;
}

.assigned-to__container {
    display: flex;
    flex-wrap: nowrap;
    justify-content: flex-start;
    align-items: center;
    margin: 3rem 0 0 0;
    min-height: 10rem;
}

.assigned-to__user-container {
    display: flex;
    position: absolute;
    top: 0;
    left: 0;
    background-color: white;
    padding: 1rem;
    border-radius: 0.5rem;
    box-shadow: 1px 1px 8px #00000029;
    transform: translate(0, -20px);
    z-index: 99;
}

.assigned-user {
    flex-shrink: 0;
}

.form-assigned-to__img {
    width: 70px;
    height: 70px;
    border-radius: 100%;
    object-fit: cover;
    border: 0.4rem solid white;
    cursor: pointer;
    position: relative;
    transition: all 125ms ease-in-out;
}

.form-assigned-to__img:not(:first-child) {
    margin: 0 0 0 -2rem;
}

.form-assigned-to__img:hover {
    z-index: 10;
    transform: scale(1.1);
}

.add-user {
    background-color: rgb(226, 226, 226);
    cursor: pointer;
    position: relative;
    width: 3.5rem;
    height: 3.5rem;
    border: unset;
    outline: none;
    border-radius: 100%;
    padding: 1rem;
    display: block;
    margin: 0 0 0 2rem;
    flex-shrink: 0;
}


.add-user::after {
    content: '';
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    display: block;
    position: absolute;
    object-fit: contain;
    background-image: url('../img/add.png');
    background-repeat: no-repeat;
    background-size: 100%;
    cursor: pointer;
    filter: invert(50%);
}

.form__btn-container {
    margin: 3rem -2rem -2rem -2rem;
    padding: 1rem;
    background-color: #e7e7e7;
    text-align: right;
}

.create-task-btn {
    font-size: 1.5rem;
    text-transform: uppercase;
    border-radius: 0.5rem;
    border: none;
    background: var(--btn-blue);
    color: white;
    padding: 1rem 2rem;
}

input[type="text"],
input[type="date"] {
    height: 4.5rem;
    width: 100%;
    padding: 0.8rem 0.5rem;
    outline: none;
    font-size: 1.6rem;
}

.input__data-icon {
    position: relative;
}

.input__data-icon::after {
    content: '';
    position: absolute;
    width: 2.5rem;
    height: 2.5rem;
    top: 0;
    right: 7px;
    background-image: url('../img/calendar_month_black_24dp.svg');
    object-fit: contain;
    background-repeat: no-repeat;
    background-size: 100%;
    filter: invert(40%);
    bottom: 0;
    margin: auto 0;
}

.input__data-icon:hover::after {
    cursor: pointer;
}

.form-select {
    width: 100%;
    height: 4.5rem;
    background-color: white;
    border: 1px solid #9a9a9a;
    font-size: 1.6rem;
    padding: 0.8rem 0.5rem;
}

.form-textarea {
    font-family: Arial, Helvetica, sans-serif;
    width: 100%;
    height: 13rem;
    resize: none;
    font-size: 1.6rem;
    padding: 0.8rem 0.5rem;
}


.d-none {
    display: none;
}

@media (max-width: 65em) {
    .assigned-to {
        flex-direction: column;
        align-items: flex-start;
    }

    .user-image-container {
        margin: 0 0 1rem 0;
    }

    .user-image-container::after {
        content: '';
        position: absolute;
        bottom: -31px;
        width: 100%;
        height: 0.2rem;
        background-image: linear-gradient(90deg, rgba(128, 128, 128, 0.384) 40%, transparent 100%);
        margin: 1rem 0;
    }

    .assigned-to__person {
        margin: 0.8rem 0 0 0;
    }
}

@media (max-width: 33em){
    .category, .backlog__titles > h3:nth-child(2) {
        display: none;
    }
}

@media (max-width: 44em) {
    .content {
        padding-left: 1.3rem;
        padding-right: 1.3rem;
        padding-top: 13rem;
        padding-bottom: 2rem;
    }
}

